Rename single reviewer to Sole reviewer

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <label for="project-selector">Select a project:</label>
     <select id="project-selector" onchange="updateProject()">
     </select>
-    <h2>Single Review</h2>
-    <img id="single-review-image" src="">
+    <h2>Sole Review</h2>
+    <img id="sole-review-image" src="">
     <h2>Multiple Reviews</h2>
     <img id="multiple-review-image" src="">
     <script src="scripts.js"></script>
