--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <select id="project-selector" onchange="updateProject()">
     </select>
     <h2>Sole Review</h2>
+    <p>Reviews for which the reviewer is the only reviewer for the given MR.</p>
     <img id="sole-review-image" src="">
     <h2>Multiple Reviews</h2>
+    <p>Reviews for which the reviewer is one of multiple reviewers for the given MR.</p>
     <img id="multiple-review-image" src="">
     <script src="scripts.js"></script>
 </body>
